--- a/pom.xml
+++ b/pom.xml
@@ -1,297 +1,129 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<modelVersion>4.0.0</modelVersion>
 
-    <properties>
-        <project.build.outputTimestamp>2020-01-01T00:00:00Z</project.build.outputTimestamp>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.sdk>11</java.sdk>
-        <lambda.functions.file>generated-lambda-functions.csv</lambda.functions.file>
-        <aws.sdk>1.12.136</aws.sdk>
-        <aws.lambda.events>3.11.0</aws.lambda.events>
-        <aws.lambda.core>1.2.1</aws.lambda.core>
-        <log4j>2.17.1</log4j>
-        <velocity>2.3</velocity>
-        <junit>5.8.2</junit>
-        <hamcrest>2.0.0.0</hamcrest>
-        <org.json>20211205</org.json>
-        <jackson-databind>2.13.1</jackson-databind>
-        <jackson-core>2.13.1</jackson-core>
-        <jackson-yaml>2.13.1</jackson-yaml>
-        <jaxb>2.4.0-b180830.0359</jaxb>
-        <opencsv>5.5.2</opencsv>
-        <picocli>4.6.2</picocli>
-        <gson>2.8.9</gson>
-        <commons-io>2.11.0</commons-io>
-        <bouncycastle-version>1.70</bouncycastle-version>
-        <exec-maven-plugin>3.0.0</exec-maven-plugin>
-        <httpclient>4.5.13</httpclient>
-        <validation-api>2.0.1.Final</validation-api>
-        <apache.sshd.version>2.8.0</apache.sshd.version>
-        <unirest-java>1.4.9</unirest-java>
-        <mockwebserver>4.9.3</mockwebserver>
-        <maven-shade-plugin>3.2.4</maven-shade-plugin>
-        <hibernate-validator>6.2.1.Final</hibernate-validator>
-        <javax-el>3.0.1-b12</javax-el>
-        <failsafe>2.4.4</failsafe>
-        <json-path>2.6.0</json-path>
-        <junit-pioneer>1.5.0</junit-pioneer>
-        <assertj-core>3.22.0</assertj-core>
-        <!-- bring to parity with mockito-junit-jupiter version -->
-        <mockito-core>4.2.0</mockito-core>
-        <mockito-junit-jupiter>4.2.0</mockito-junit-jupiter>
-        <powermock>2.0.9</powermock>
-        <guava>31.0.1-jre</guava>
-        <opentracing.api.version>0.33.0</opentracing.api.version>
-        <aspectj.version>1.9.9.1</aspectj.version>
-    </properties>
+<groupId>com.wisetack</groupId>
+<artifactId>localstack-wisetack-samples</artifactId>
+<packaging>jar</packaging>
+<version>1.0</version>
+<name>LocalStack Wisetack Samples</name>
 
-    <groupId>com.wisetack</groupId>
-    <artifactId>localstack-wisetack-samples</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0</version>
-    <name>LocalStack Wisetack Samples</name>
+<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+</properties>
 
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
-                    <configuration>
-                        <source>${java.sdk}</source>
-                        <target>${java.sdk}</target>
-                        <compilerArgs>
-                            <arg>-Xlint:deprecation</arg>
-                        </compilerArgs>
-                        <!-- needed for aspectj -->
-                        <useIncrementalCompilation>false</useIncrementalCompilation>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.2.1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-source-plugin</artifactId>
-                    <version>3.2.1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M5</version>
-                    <configuration>
-                        <trimStackTrace>false</trimStackTrace>
-                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                        <forkedProcessTimeoutInSeconds>5400</forkedProcessTimeoutInSeconds>
-                        <systemPropertyVariables>
-                            <user.timezone>UTC</user.timezone>
-                            <mvn_build>true</mvn_build>
-                            <!-- have to assume 2nd level module then override in 3 level modules -->
-                            <configuration_secrets_file>
-                                ${project.parent.parent.basedir}/aws/terraform/environments/wisetack-shared/layer15/variables.auto.tfvars
-                            </configuration_secrets_file>
-                            <wisetack_environment>wisetack-dev</wisetack_environment>
-                            <dynamoDbEndpoint>http://localhost:8000</dynamoDbEndpoint>
-                            <dynamoDbRegion>test-region</dynamoDbRegion>
-                            <dynamoDbTerraform>
-                                ${project.parent.parent.basedir}/aws/terraform/modules/layer40/region/main.tf
-                            </dynamoDbTerraform>
-                            <s3Endpoint>http://localhost:8002</s3Endpoint>
-                            <s3Region>test-region</s3Region>
-                        </systemPropertyVariables>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-install-plugin</artifactId>
-                    <version>3.0.0-M1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.8.7</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>prepare-agent</goal>
-                            </goals>
-                        </execution>
-                        <execution>
-                            <id>report</id>
-                            <goals>
-                                <goal>report</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <includes>
-                            <include>com/wisetack/**</include>
-                        </includes>
+<dependencies>
+    <dependency>
+        <groupId>com.amazonaws</groupId>
+        <artifactId>aws-lambda-java-core</artifactId>
+        <version>1.2.1</version>
+    </dependency>
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.10</version>
+        <scope>compile</scope>
+    </dependency>
+</dependencies>
+
+<build>
+    <plugins>
+        <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>3.2.4</version>
+            <configuration>
+                <createDependencyReducedPom>false</createDependencyReducedPom>
+                <filters>
+                    <filter>
+                        <artifact>*:*</artifact>
                         <excludes>
-                            <exclude>**/**Dagger*.class</exclude>
-                            <exclude>**/*_Factory.class</exclude>
-                            <exclude>**/*Module_Provide*.class</exclude>
-                            <exclude>**/*_Factory*.class</exclude>
-                            <exclude>**/*LambdaProxy.class</exclude>
+                            <exclude>META-INF/*.SF</exclude>
+                            <exclude>META-INF/*.DSA</exclude>
+                            <exclude>META-INF/*.RSA</exclude>
+                            <exclude>META-INF/versions/9/module-info.class</exclude>
+                            <exclude>META-INF/versions/11/module-info.class</exclude>
+                            <exclude>module-info.class</exclude>
+                            <exclude>META-INF/NOTICE.txt</exclude>
+                            <exclude>META-INF/NOTICE</exclude>
+                            <exclude>META-INF/LICENSE</exclude>
+                            <exclude>META-INF/LICENSE.txt</exclude>
+                            <exclude>META-INF/NOTICE.md</exclude>
+                            <exclude>META-INF/LICENSE.md</exclude>
+                            <exclude>META-INF/DEPENDENCIES</exclude>
+                            <exclude>META-INF/kie.conf</exclude>
+                            <exclude>META-INF/MANIFEST.MF</exclude>
+                            <exclude>META-INF/services/com.fasterxml.jackson.core.JsonFactory</exclude>
+                            <exclude>META-INF/services/com.fasterxml.jackson.core.ObjectCodec</exclude>
+                            <exclude>META-INF/ErraiApp.properties</exclude>
+                            <exclude>holidays.csv</exclude>
+                            <exclude>git.properties</exclude>
+                            <exclude>META-INF/io.netty.versions.properties</exclude>
+                            <exclude>META-INF/org/apache/logging/log4j/core/config/plugins/Log4j2Plugins.dat</exclude>
                         </excludes>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <version>3.2.0</version>
-                    <executions>
-                        <execution>
-                            <id>copy</id>
-                            <phase>test-compile</phase>
-                            <goals>
-                                <goal>copy-dependencies</goal>
-                            </goals>
-                            <configuration>
-                                <includeScope>test</includeScope>
-                                <includeTypes>so,dll,dylib</includeTypes>
-                                <outputDirectory>${project.basedir}/native-libs</outputDirectory>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>aspectj-maven-plugin</artifactId>
-                    <version>1.14.0</version>
+                    </filter>
+                </filters>
+                <artifactSet>
+                    <excludes>
+                        <exclude>com.amazonaws:aws-lambda-java-core</exclude>
+                    </excludes>
+                </artifactSet>
+                <transformers>
+                    <transformer
+                            implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <manifestEntries>
+                            <Multi-Release>true</Multi-Release>
+                        </manifestEntries>
+                    </transformer>
+                </transformers>
+            </configuration>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+            <configuration>
+                <source>11</source>
+                <target>11</target>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>io.swagger.codegen.v3</groupId>
+            <artifactId>swagger-codegen-maven-plugin</artifactId>
+            <version>3.0.11</version>
+            <executions>
+                <execution>
+                    <id>convert</id>
+                    <phase>generate-resources</phase>
+                    <goals>
+                        <goal>generate</goal>
+                    </goals>
                     <configuration>
-                        <complianceLevel>${java.sdk}</complianceLevel>
-                        <source>${java.sdk}</source>
-                        <target>${java.sdk}</target>
-                        <showWeaveInfo>true</showWeaveInfo>
-                        <verbose>true</verbose>
-                        <Xlint>ignore</Xlint>
-                        <encoding>UTF-8</encoding>
-                        <sources>
-                            <source>
-                                <basedir>${project.basedir}</basedir>
-                                <includes>
-                                    <include>**/*Aspect.java</include>
-                                </includes>
-                            </source>
-                        </sources>
+                        <inputSpec>api.yaml</inputSpec>
+                        <!-- Use "openapi" to convert YAML->JSON or "openapi-yaml" to convert JSON->YAML -->
+                        <language>openapi</language>
+                        <!-- Output directory, relative to the project directory. Default is ${project.build.directory}/generated-sources/swagger -->
+                        <output>specs</output>
+                        <configOptions>
+                            <!-- Default output file name is openapi.json or openapi.yaml -->
+                            <outputFile>api.json</outputFile>
+                        </configOptions>
                     </configuration>
-                    <executions>
-                        <execution>
-                            <phase>process-classes</phase>
-                            <goals>
-                                <goal>compile</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.aspectj</groupId>
-                            <artifactId>aspectjtools</artifactId>
-                            <version>${aspectj.version}</version>
-                        </dependency>
-                    </dependencies>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>com.amazonaws</groupId>
-                <artifactId>aws-java-sdk-bom</artifactId>
-                <version>${aws.sdk}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.amazonaws</groupId>
-                <artifactId>aws-lambda-java-core</artifactId>
-                <version>${aws.lambda.core}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.junit</groupId>
-                <artifactId>junit-bom</artifactId>
-                <version>${junit}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.jayway.jsonpath</groupId>
-                <artifactId>json-path</artifactId>
-                <version>${json-path}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.wisetack.libraries</groupId>
-                <artifactId>tracing</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.aspectj</groupId>
-                <artifactId>aspectjrt</artifactId>
-                <version>${aspectj.version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-    <dependencies>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit-pioneer</groupId>
-            <artifactId>junit-pioneer</artifactId>
-            <version>${junit-pioneer}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
-    <profiles>
-        <!-- this profile is active by default -->
-        <profile>
-            <id>dev</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <excludedGroups>integration</excludedGroups>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <!-- this profile is for running integration tests -->
-        <profile>
-            <id>integration.test</id>
-            <activation>
-                <property>
-                    <name>env.WISETACK_ENV</name>
-                    <value>integration.test</value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+</build>
 </project>
